# contextify

./: Cargo.toml  README.md
config/: .blacklist  .whitelist
src/: lib.rs  main.rs
tasks/: vscode_extension_context_menu.md
tests/: integration_tests.rs
tests/data/basic_test/: file2.md
tests/data/basic_test/config/: .whitelist
tests/data/whitelist_test/subdir/: subfile1.rs
