[package]
name = "contextify"
version = "0.1.4"
edition = "2021"
authors = ["Eugen Soloviov (suenot)"]
description = "A tool to save project structure and contents to a text file"
readme = "README.md"
repository = "https://github.com/suenot/contextify"
license = "MIT"

[lib]
name = "contextify"
path = "src/lib.rs"

[[bin]]
name = "contextify"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"
glob = "0.3"
rayon = "1.8"
ignore = "0.4"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.8"
